--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "main": "index.js",
   "dependencies": {
     "esbuild": "^0.19.10",
-    "picocolors": "^1.0.0",
     "nanoid": "^3.3.7",
-    "source-map-js": "^1.0.2",
+    "picocolors": "^1.0.0",
     "postcss": "^8.4.32",
-    "rollup": "^4.9.1"
+    "rollup": "^4.9.1",
+    "source-map-js": "^1.0.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
